# slang

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist  README.md
include/: SlangShader.h  glslang_util.h  slang.h  slang_semantics.h
src/: SlangShader.m  verbosity.c  verbosity.h  video_shader_parse.c  video_shader_parse.h
src/drivers_shader/: glslang_util.cpp  slang_preprocess.cpp  slang_preprocess.h  slang_process.cpp  slang_process.h  slang_reflection.cpp  slang_reflection.h
src/glslang/: glslang.cpp
test/: CMakeLists.txt  Settings.cpp  Settings.h  test.mm
test/files/shaders/tests/: in-array.slang  in-array.slangp
